--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bourbon-neat": "^1.9.0",
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.26.5",
     "del": "^3.0.0",
     "gsap": "^2.0.2",
     "gulp-sass": "^3.1.0",
     "imagesloaded": "^4.1.4",
+    "node-sass": "^4.12.0",
     "normalize.scss": "^0.1.0",
     "run-sequence": "^2.2.1"
   }
