--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-uglify": "^0.3.1"
   },
   "dependencies": {
+    "animejs": "^3.2.0",
     "babel-polyfill": "^6.26.0",
     "bourbon-neat": "^1.9.0",
     "browser-sync": "^2.26.5",
