--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gsap": "^2.0.2",
     "gulp-sass": "^3.1.0",
     "imagesloaded": "^4.1.4",
+    "modern-normalize": "^1.0.0",
     "node-sass": "^4.12.0",
     "normalize.scss": "^0.1.0",
     "run-sequence": "^2.2.1"
